deploy/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
      - name: nky
      containers:
      - name: nginx
        image: repo.nky.wjcloud.co.kr/nky/hello:latest
        ports:
        - containerPort: 80
        resources:
         requests:
           cpu: "1"

           memory: "1Gi"
         limits:
           cpu: "1.5"

           memory: "2Gi"
