deploy/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: repo.nky.wjcloud.co.kr/nky/hello:9
        name: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1.5"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 1Gi
      imagePullSecrets:
      - name: nky
